--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <header>
-
+        <img src="images/company-svgrepo-com-lt.png" alt="An image of a building">
+        <ul>
+            <li><link rel="stylesheet" href="" target="_blank">header link one</li>
+            <li><link rel="stylesheet" href="" target="_blank">header link two</li>
+            <li><link rel="stylesheet" href="" target="_blank">header link three</li>
+        </ul>
     </header>
     <main>
 
