chore(main sections): Add sections to main
Main content areas
* Add .signup
* Add .info
* Add .quote
* Add .call_to_action

--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
             <li><link rel="stylesheet" href="" target="_blank">header link three</li>
         </ul>
     </header>
-    <main>
 
+    <main>
+        <div class="signup">
+
+        </div>
+        <div class="info">
+
+        </div>
+        <div class="insp_quote">
+
+        </div>
+        <div class="call_to_action">
+
+        </div>
     </main>
+
     <footer>
         <p>Copyright &#169; The Odin Project 2024</p>
     </footer>
