--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
     <main>
         <div class="signup">
-
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
+            <input type="button" value="Sign up">
+            <img src="" alt="This is a placeholder for an image">
         </div>
         <div class="info">
 
