chore(comments): Add comments for sections
* These allow each section to be found more easily once they grow

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Landing Page</title>
 </head>
 <body>
+
+    <!-- header ---------------------------------------------------------------------------------------------------- -->
     <header>
         <img src="images/company-svgrepo-com-lt.png" alt="An image of a building">
         <ul>
@@ -16,24 +18,30 @@
         </ul>
     </header>
 
+    <!-- main ------------------------------------------------------------------------------------------------------ -->
     <main>
+        <!-- .signup ------------------------------------------------------- -->
         <div class="signup">
             <h2>This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
             <input type="button" value="Sign up">
             <img src="" alt="This is a placeholder for an image">
         </div>
+        <!-- .info --------------------------------------------------------- -->
         <div class="info">
 
         </div>
+        <!-- .insp_quote --------------------------------------------------- -->
         <div class="insp_quote">
 
         </div>
+        <!-- .call_to_action ----------------------------------------------- -->
         <div class="call_to_action">
 
         </div>
     </main>
 
+    <!-- footer ---------------------------------------------------------------------------------------------------- -->
     <footer>
         <p>Copyright &#169; The Odin Project 2024</p>
     </footer>
