chore(.insp_quote): Add content

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         </div>
         <!-- .insp_quote --------------------------------------------------- -->
         <div class="insp_quote">
-
+            <p>Life is what happens to you while you’re busy making other plans.<br />
+                <strong>—John Lennon</strong></p>
         </div>
         <!-- .call_to_action ----------------------------------------------- -->
         <div class="call_to_action">
