chore(.call_to_action): General content
* Add a call to action section with a title, p, and button.
* Add id to sign up buttons in .call_to_action and .sign_up sections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="signup">
             <h2>This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
-            <input type="button" value="Sign up">
+            <input type="button" value="Sign up" class="btn_signup">
             <img src="" alt="This is a placeholder for an image">
         </div>
         <!-- .info --------------------------------------------------------- -->
@@ -54,7 +54,9 @@
         </div>
         <!-- .call_to_action ----------------------------------------------- -->
         <div class="call_to_action">
-
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product by clicking the button right over there!</p>
+            <input type="button" value="Sign up"  class="btn_signup">
         </div>
     </main>
 
