Chore(.signup): Move into header

--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
 
     <!-- header ---------------------------------------------------------------------------------------------------- -->
     <header>
+        <!-- Logo and Links ------------------------------------------------ -->
         <img src="images/company-svgrepo-com-dk.png" alt="An image of a building">
         <ul>
             <li><link rel="stylesheet" href="" target="_blank">header link one</li>
             <li><link rel="stylesheet" href="" target="_blank">header link two</li>
             <li><link rel="stylesheet" href="" target="_blank">header link three</li>
         </ul>
-    </header>
-
-    <!-- main ------------------------------------------------------------------------------------------------------ -->
-    <main>
         <!-- .signup ------------------------------------------------------- -->
         <div class="signup">
             <h2>This website is awesome</h2>
@@ -27,6 +24,10 @@
             <input type="button" value="Sign up" class="btn_signup">
             <img src="" alt="This is a placeholder for an image">
         </div>
+    </header>
+
+    <!-- main ------------------------------------------------------------------------------------------------------ -->
+    <main>
         <!-- .info --------------------------------------------------------- -->
         <div class="info">
             <h3>Some random information.</h3>
