chore(header): Separate into 2 areas

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <!-- header ---------------------------------------------------------------------------------------------------- -->
     <header>
         <!-- Logo and Links ------------------------------------------------ -->
-        <img src="images/company-svgrepo-com-dk.png" alt="An image of a building">
-        <ul>
-            <li><link rel="stylesheet" href="" target="_blank">header link one</li>
-            <li><link rel="stylesheet" href="" target="_blank">header link two</li>
-            <li><link rel="stylesheet" href="" target="_blank">header link three</li>
-        </ul>
+        <div class="logo_and_links">
+            <img src="images/company-svgrepo-com-dk.png" alt="An image of a building">
+            <ul>
+                <li><link rel="stylesheet" href="" target="_blank">header link one</li>
+                <li><link rel="stylesheet" href="" target="_blank">header link two</li>
+                <li><link rel="stylesheet" href="" target="_blank">header link three</li>
+            </ul>
+        </div>
         <!-- .signup ------------------------------------------------------- -->
         <div class="signup">
             <h2>This website is awesome</h2>
