chore(.fig_container): To allow figure styling

--- a/index.html
+++ b/index.html
@@ -33,22 +33,24 @@
         <!-- .info --------------------------------------------------------- -->
         <div class="info">
             <h3>Some random information.</h3>
-            <figure>
-                <img src="images/apple.jpg" alt="An apple" class="info_img">
-                <figcaption>This is some subtext under an illustration or image.</figcaption>
-            </figure>
-            <figure>
-                <img src="images/orange.jpg" alt="An orange" class="info_img">
-                <figcaption>This is some subtext under an illustration or image.</figcaption>
-            </figure>
-            <figure>
-                <img src="images/fig.jpg" alt="Figs" class="info_img">
-                <figcaption>This is some subtext under an illustration or image.</figcaption>
-            </figure>
-            <figure>
-                <img src="images/pear.jpg" alt="A pear" class="info_img">
-                <figcaption>This is some subtext under an illustration or image.</figcaption>
-            </figure>
+            <div class="fig_container">
+                <figure>
+                    <img src="images/apple.jpg" alt="An apple" class="info_img">
+                    <figcaption>This is some subtext under an illustration or image.</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/orange.jpg" alt="An orange" class="info_img">
+                    <figcaption>This is some subtext under an illustration or image.</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/fig.jpg" alt="Figs" class="info_img">
+                    <figcaption>This is some subtext under an illustration or image.</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/pear.jpg" alt="A pear" class="info_img">
+                    <figcaption>This is some subtext under an illustration or image.</figcaption>
+                </figure>
+            </div>
         </div>
         <!-- .insp_quote --------------------------------------------------- -->
         <div class="insp_quote">
