--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
         </div>
         <!-- .call_to_action ----------------------------------------------- -->
         <div class="call_to_action">
-            <h4>Call to action! It's time!</h4>
-            <p>Sign up for our product by clicking the button right over there!</p>
+            <div class="call_to_action_sub">
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking the button right over there!</p>
+            </div>
             <input type="button" value="Sign up"  class="btn_signup">
         </div>
     </main>
