--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
             <input type="button" value="Sign up" class="btn_signup">
-            <img src="" alt="This is a placeholder for an image">
+            <img src="./images/placeholder.jpeg" alt="This is a placeholder for an image">
         </div>
     </header>
 
