--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <!-- Logo and Links ------------------------------------------------ -->
         <div class="logo_and_links">
-            <img src="images/company-svgrepo-com-dk.png" alt="An image of a building">
+            <img src="images/company-svgrepo-com-dk.png" alt="An image of a building" class="logo">
             <ul>
                 <li><link rel="stylesheet" href="" target="_blank">header link one</li>
                 <li><link rel="stylesheet" href="" target="_blank">header link two</li>
@@ -21,10 +21,12 @@
         </div>
         <!-- .signup ------------------------------------------------------- -->
         <div class="signup">
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
-            <input type="button" value="Sign up" class="btn_signup">
-            <img src="./images/placeholder.jpeg" alt="This is a placeholder for an image">
+            <div class="signup_sub">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
+                <input type="button" value="Sign up" class="btn_signup">
+            </div>
+            <img src="./images/placeholder.jpeg" alt="This is a placeholder for an image" class="ph_image">
         </div>
     </header>
 
