styles(.insp_quote): General styling
* Make this fit in the window.
* Separate the quote from the signature.
* Shrink the info section so that the window is sizing better

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </div>
         <!-- .insp_quote --------------------------------------------------- -->
         <div class="insp_quote">
-            <p>Life is what happens to you while you’re busy making other plans.<br />
-                <strong>—John Lennon</strong></p>
+            <p>Life is what happens to you while you’re busy making other plans.</p>
+            <p span class="sig">—John Lennon</p>
         </div>
         <!-- .call_to_action ----------------------------------------------- -->
         <div class="call_to_action">
