chore(logo): Remove logo, add text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <!-- Logo and Links ------------------------------------------------ -->
         <div class="logo_and_links">
-            <img src="images/company-svgrepo-com-dk.png" alt="An image of a building" class="logo">
+            <h1>Header Logo</h1>
             <ul>
                 <li><link rel="stylesheet" href="" target="_blank">header link one</li>
                 <li><link rel="stylesheet" href="" target="_blank">header link two</li>
